--- a/public/src/sass/main.scss
+++ b/public/src/sass/main.scss
@@ -1,4 +1,3 @@
-body {
-    background : #fff;
-    color      : #000;
-}
+@import 'base/functions';
+@import 'base/mixins';
+@import 'base/variables';
