--- a/public/src/sass/main.scss
+++ b/public/src/sass/main.scss
@@ -1,3 +1,7 @@
 @import 'base/functions';
 @import 'base/mixins';
 @import 'base/variables';
+
+div {
+    border-image: url('img.png') 10px / 20px round;
+}
